--- a/public/basket.html
+++ b/public/basket.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Доставка и оплата</title>
+    <title>Корзина</title>
   </head>
 
   <body>
@@ -183,58 +183,15 @@
         <div class="flex items-center gap-1 md:gap-2 text-xs sm:text-sm/4 mt-4 md:mt-6">
           <span class="text-brand-black-300">Главная</span>
           <img src="./img/icon-pathblack.svg" alt="Path icon" />
-          <span class="line-clamp-1">Доставка и оплата</span>
+          <span class="line-clamp-1">Контакты</span>
         </div>
       </nav>
     </header>
+
     <!-- MAIN -->
     <main>
       <section class="max-w-base mx-auto mt-6 px-4 md:px-7">
-        <div class="bg-white rounded-md p-4 md:px-8 md:py-10">
-          <h3>Доставка и оплата</h3>
-          <ul class="text-xs lg:text-15 mt-4 space-y-4">
-            <li>
-              <p>
-                Вы можете оформить заказ на сумму от 600 рублей, мы доставим его в любой город до пункта выдачи или до
-                двери.
-                <br><br class="hidden lg:block">
-                Стоимость доставки рассчитывается автоматически в корзине и зависит от вашего города, суммы и веса
-                заказа.
-                Почти всегда доставляем бесплатно.
-              </p>
-            </li>
-            <li>
-              <p>
-                Вы можете оформить заказ на сумму от 600 рублей, мы доставим его в любой город до пункта выдачи или до
-                двери.
-                <br><br class="hidden lg:block">
-                Стоимость доставки рассчитывается автоматически в корзине и зависит от вашего города, суммы и веса
-                заказа.
-                Почти всегда доставляем бесплатно.
-              </p>
-            </li>
-            <li>
-              <p>
-                Вы можете оформить заказ на сумму от 600 рублей, мы доставим его в любой город до пункта выдачи или до
-                двери.
-                <br><br class="hidden lg:block">
-                Стоимость доставки рассчитывается автоматически в корзине и зависит от вашего города, суммы и веса
-                заказа.
-                Почти всегда доставляем бесплатно.
-              </p>
-            </li>
-            <li>
-              <p>
-                Вы можете оформить заказ на сумму от 600 рублей, мы доставим его в любой город до пункта выдачи или до
-                двери.
-                <br><br class="hidden lg:block">
-                Стоимость доставки рассчитывается автоматически в корзине и зависит от вашего города, суммы и веса
-                заказа.
-                Почти всегда доставляем бесплатно.
-              </p>
-            </li>
-          </ul>
-        </div>
+        <h3>Корзина</h3>
       </section>
     </main>
     <!-- FOOTER -->
@@ -242,7 +199,7 @@
       <div class="bg-white rounded-md p-4 md:p-6 lg:p-0 lg:px-30 lg:pt-14 lg:pb-6">
         <!-- Logo  -->
         <div>
-          <a href="#">
+          <a class="w-max" href="#">
             <img class="h-6 lg:h-8" src="./img/icon-logo.svg" alt="logo footer">
           </a>
         </div>
