--- a/public/contacts.html
+++ b/public/contacts.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Contacts</title>
+    <title>Контакты</title>
   </head>
 
   <body>
@@ -228,7 +228,7 @@
           </ul>
           <div>
             <!-- Map -->
-            <h4 class="font-medium lg:text-xl/5 text-[#323136] mb-2 mt-5 lg:mt-9">Схема проезда</h4>
+            <h4 class="font-medium lg:text-xl/5 text-brand-gray-900 mb-2 mt-5 lg:mt-9">Схема проезда</h4>
             <div class="w-full aspect-[1048/504] overflow-hidden rounded-md mt-5">
               <img class="size-full object-cover" src="./img/image-map.png" alt="Map">
             </div>
