--- a/public/index.html
+++ b/public/index.html
@@ -192,7 +192,7 @@
           </div>
         </section>
         <!-- Catalog -->
-        <section class="mt-6">
+        <section class="pt-10 lg:pt-14">
           <h2>Каталог</h2>
           <!-- Items -->
           <div
