--- a/public/page-card.html
+++ b/public/page-card.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Доставка и оплата</title>
+    <title>Бонусная программа</title>
   </head>
 
   <body>
@@ -183,7 +183,7 @@
         <div class="flex items-center gap-1 md:gap-2 text-xs sm:text-sm/4 mt-4 md:mt-6">
           <span class="text-brand-black-300">Главная</span>
           <img src="./img/icon-pathblack.svg" alt="Path icon" />
-          <span class="line-clamp-1">Доставка и оплата</span>
+          <span class="line-clamp-1">Габа Улун</span>
         </div>
       </nav>
     </header>
@@ -191,47 +191,131 @@
     <main>
       <section class="max-w-base mx-auto mt-6 px-4 md:px-7">
         <div class="bg-white rounded-md p-4 md:px-8 md:py-10">
-          <h3>Доставка и оплата</h3>
-          <ul class="text-xs lg:text-15 mt-4 space-y-4">
+          <h3>Бонусная программа</h3>
+          <ul class="mt-4 space-y-4">
             <li>
-              <p>
-                Вы можете оформить заказ на сумму от 600 рублей, мы доставим его в любой город до пункта выдачи или до
-                двери.
-                <br><br class="hidden lg:block">
-                Стоимость доставки рассчитывается автоматически в корзине и зависит от вашего города, суммы и веса
-                заказа.
-                Почти всегда доставляем бесплатно.
-              </p>
+              <h5 class="font-medium text-lg lg:text-xl">Бонусы за покупки.</h5>
+              <p class="text-xs lg:text-15 text-brand-dark">- Размер бонусов составляет 1% от стоимости товара.</p>
             </li>
             <li>
-              <p>
-                Вы можете оформить заказ на сумму от 600 рублей, мы доставим его в любой город до пункта выдачи или до
-                двери.
-                <br><br class="hidden lg:block">
-                Стоимость доставки рассчитывается автоматически в корзине и зависит от вашего города, суммы и веса
-                заказа.
-                Почти всегда доставляем бесплатно.
+              <h5 class="font-medium text-lg lg:text-xl">Бонусы за отзывы о товаре.</h5>
+              <p class="text-xs lg:text-15 text-brand-dark">
+                - За каждый отзыв о купленном товаре, начисляется по 30 баллов. <br>
+                (Кол-во отзывов соответствует купленным товарам. 1 товар - 1 отзыв.)
+              </p>
+              <p class="text-xs lg:text-15 text-brand-dark">
+                - За каждый отзыв о товаре, начисляется по 5 баллов. Количество отзывов не ограниченно. <br>
+                (Технический момент: Отзыв должен быть минимум 300 збп. и тд.)
               </p>
             </li>
+            <!-- Drop Down -->
+            <div>
+              <button
+                class="button-green-outline w-full max-w-[43.0625rem] flex items-center justify-between gap-5 !rounded-md lg:pl-4 p-3">
+                <span class="text-xs lg:text-15 text-brand-dark">Подробнее</span>
+                <svg class="shrink-0 rotate-180" width="11" height="7" viewBox="0 0 11 7" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M10.5762 2.26172L6.12305 6.45117C5.9668 6.58789 5.80078 6.65625 5.625 6.65625C5.44922 6.65625 5.29297 6.58789 5.15625 6.45117L0.703125 2.26172C0.410156 1.92969 0.400391 1.59766 0.673828 1.26562C0.986328 0.972656 1.31836 0.962891 1.66992 1.23633L5.625 4.98633L9.60938 1.23633C9.94141 0.962891 10.2637 0.962891 10.5762 1.23633C10.8496 1.58789 10.8496 1.92969 10.5762 2.26172Z"
+                    fill="#545454" />
+                </svg>
+              </button>
+              <div class="w-full max-w-[45rem] text-brand-dark text-xs lg:text-15 mt-2 px-4 space-y-5">
+                <p>
+                  Спасибо, что оставляете отзывы и делитесь своим мнением о товарах и услугах нашего магазина. Отзывы
+                  помогают вам и другим пользователям составить впечатление о товарах
+                  до покупки и выбрать лучшее.
+                  <br> <br class="hidden lg:block">
+                  Благодаря вашей активности на сайте domtea.ru мы ежедневно улучшаем качество сервиса
+                  и товаров. Чтобы ваш отзыв был опубликован, расскажите о своем опыте покупок — чем вам понравился
+                  товар или, наоборот, с какими проблемами вы столкнулись при его использовании или покупке.
+                </p>
+                <p class="font-medium">
+                  За отзывы, опубликованные на сайте domtea.ru, предусмотрено начисляемое вознаграждение:
+                </p>
+                <p>
+                  30 бонусных баллов за отзыв о товаре.
+                  <br> <br class="hidden lg:block">
+                  При оплате заказа 1 балл = 1 рубль. Максимально бонусными баллами можно оплатить 30% стоимости заказа.
+                  <br> <br class="hidden lg:block">
+                  Получать вознаграждение могут только зарегистрированные на сайте domtea.ru пользователи.
+                  Зарегистрироваться можно по ссылке.
+                  <br> <br class="hidden lg:block">
+                  Все оставленные отзывы проходят модерацию перед публикацией на сайте. Срок проверки и публикации
+                  отзыва — до 7 рабочих дней. Срок может быть увеличен, если требуется дополнительное время для
+                  обработки.
+
+
+                  <br> <br class="hidden lg:block"> <br class="hidden lg:block">
+                  Обращаем ваше внимание, что отзыв может быть НЕ опубликован или удалён, если:
+                  <br> <br class="hidden lg:block">
+                  Содержит ненормативную лексику, нецензурные высказывания, грубые, агрессивные высказывания или
+                  оскорбления;
+                  <br> <br class="hidden lg:block">
+                  Написан БОЛЬШИМИ буквами;
+                  <br> <br class="hidden lg:block">
+                  Написан латинскими буквами;
+                  <br> <br class="hidden lg:block">
+                  Содержит ссылки на другие сайты;
+                  <br> <br class="hidden lg:block">
+                  Содержит большое число орфографических ошибок, которые затрудняют понимание текста;
+                  <br> <br class="hidden lg:block">
+                  Относится к обсуждению цены, а не свойств товара;
+                  <br> <br class="hidden lg:block">
+                  Содержит упоминание или сравнение с другими брендами конкурентов;
+                  <br> <br class="hidden lg:block">
+                  Содержит информацию рекламного характера;
+                  <br> <br class="hidden lg:block">
+                  Товар не приобретался автором отзыва;
+                  <br> <br class="hidden lg:block">
+                  Содержит в тексте отзыва вопросы, а не информацию о товаре;
+                  <br> <br class="hidden lg:block">
+                  Товар неверно эксплуатировался;
+                  <br> <br class="hidden lg:block">
+                  Краткий или малоинформативный отзыв;
+                  <br> <br class="hidden lg:block">
+                  Повторяет опубликованные ранее отзывы;
+                  <br> <br class="hidden lg:block">
+                  Содержит пропаганду социального, расового, национального, религиозного или языкового превосходства
+                  <br> <br class="hidden lg:block">
+                  (ст.29 Конституции РФ);
+                  Содержит распространение сведений, порочащих честь, достоинство или деловую репутацию гражданина,
+                  юридического лица (ст.152 Гражданского кодекса РФ).
+                  <br> <br class="hidden lg:block">
+                  Если ваш вопрос был решен и замечаний к качеству товаров и услуг не осталось, вы можете отказаться от
+                  публикации отзыва.
+                  <br> <br class="hidden lg:block">
+                  Ждем вас за новыми покупками в domtea.ru
+                </p>
+              </div>
+            </div>
             <li>
-              <p>
-                Вы можете оформить заказ на сумму от 600 рублей, мы доставим его в любой город до пункта выдачи или до
-                двери.
-                <br><br class="hidden lg:block">
-                Стоимость доставки рассчитывается автоматически в корзине и зависит от вашего города, суммы и веса
-                заказа.
-                Почти всегда доставляем бесплатно.
+              <h5 class="font-medium text-lg lg:text-xl">Скидка на разовую покупку.</h5>
+              <p class="text-xs lg:text-15 text-brand-dark">
+                <span class="font-semibold">5%</span>
+                — при общей сумме вашего заказа более
+                <span class="font-semibold">5000 рублей.</span>
               </p>
-            </li>
-            <li>
-              <p>
-                Вы можете оформить заказ на сумму от 600 рублей, мы доставим его в любой город до пункта выдачи или до
-                двери.
-                <br><br class="hidden lg:block">
-                Стоимость доставки рассчитывается автоматически в корзине и зависит от вашего города, суммы и веса
-                заказа.
-                Почти всегда доставляем бесплатно.
+              <p class="text-xs lg:text-15 text-brand-dark">
+                <span class="font-semibold">7%</span>
+                — при общей сумме вашего заказа более
+                <span class="font-semibold">7000 рублей.</span>
               </p>
+              <p class="text-xs lg:text-15 text-brand-dark">
+                <span class="font-semibold">10%</span>
+                — при общей сумме вашего заказа более
+                <span class="font-semibold">10000 рублей.</span>
+              </p>
+              <div class="text-xs lg:text-15 text-brand-dark mt-4 space-y-4">
+                <p>
+                  Бонусы начисляются при закрытии заказа.
+                </p>
+                <p>По истечении срока действия баллов, 1 год, баллы аннулируются.</p>
+                <p>
+                  Вы можете оплатить Баллами до 30% стоимости покупки при оформлении заказа на сайте интернет-магазина.
+                  <span class="font-semibold">1 балл = 1 рубль.</span>
+                </p>
+              </div>
             </li>
           </ul>
         </div>
