--- a/public/articles-news.html
+++ b/public/articles-news.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Product Card</title>
+    <title>Новости и записи для сео</title>
   </head>
 
   <body>
