--- a/public/news.html
+++ b/public/news.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Style -->
     <link rel="stylesheet" href="./css/styles.css">
-    <title>News</title>
+    <title>Искусство трансформации:</title>
   </head>
 
   <body>
